--- a/index.html
+++ b/index.html
@@ -6,6 +6,5 @@
   </head>
   <body>
     <div id="root"></div>
-  </body>
-  <script src="dist/bundle.js"></script>
+  <script type="text/javascript" src="manifest.cb061a0d05b0b3836d93.js"></script><script type="text/javascript" src="vendor.eb35de738484861e5eb4.js"></script><script type="text/javascript" src="bundle.f6762ccad773d8a62ee5.js"></script></body>
 </html>
